# DNA_compression

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  api.conf  ngrest.conf  ngrest.load  ports.conf
.ngrest/: services
api/: CMakeLists.txt
api/src/: CodingAlgorithm.h  CodingAlgorithmsMethods.cpp  CodingAlgorithmsMethods.h  EncodeHelper.cpp  Huffman.cpp  Huffman.h  LinearCode.cpp  LinearCode.h  ShannonFano.h  SpecterLinearCode.cpp  SpecterLinearCode.h  SpectreElement.cpp  SpectreElement.h  api.cpp  api.h
shano/: CMakeLists.txt
shano/src/: EncodeHelper.h  ShannonFano.cpp  shano.cpp  shano.h
